fix(styles): update link colors and hover effects for better visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
   --main-color: #367DCB;
   --main-color-rgb: 54, 125, 203;
   --main-font-color: #333;
+  --main-link-color: #265592;
   --background-color-light: #F7F8F6;
   --background-color-dark: #5E7181;
 }
@@ -17,7 +18,7 @@ a {
 }
 
 a:hover {
-  text-decoration: underline;
+  border-bottom: 1px solid transparent !important;
 }
 
 p {
@@ -152,7 +153,7 @@ body.vg-sidebar-open {
   right: 0;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   background: var(--main-color);
 }
 
@@ -607,17 +608,18 @@ body.vg-sidebar-open {
   top: 2px;
   bottom: 2px;
   width: 2px;
-  background-color: var(--main-color);
+  background-color: var(--main-link-color);
 }
 
 .vg-post-tags__item a {
   font-family: var(--secondary-font);
   font-weight: 700;
-  color: var(--main-color);
+  color: var(--main-link-color);
 }
 
 .vg-post__text a {
-  color: var(--main-color);
+  border-bottom: 1px solid currentColor;
+  color: var(--main-link-color);
 }
 
 .vg-post__text h1,
@@ -628,7 +630,7 @@ body.vg-sidebar-open {
 .vg-post__text h6 {
   font-family: var(--secondary-font);
   font-weight: 400;
-  color: var(--main-color);
+  color: var(--main-link-color);
 }
 
 .vg-post__text ul,
